--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-components",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/MyagkiyBogdan/goit-react-hw-01-components",
+  "homepage": "https://MyagkiyBogdan.github.io/goit-react-hw-01-components",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
